<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kapi_fon"
    android:orientation="vertical"
    tools:context=".CreateAccountActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier_center_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier_center_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier_center_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/barrier_center_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02"/>

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/kapi_plus"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right"
        app:layout_constraintBottom_toTopOf="@id/sign_up_hello"
        app:layout_constraintTop_toTopOf="@id/barrier_center_up"/>

    <TextView
        android:id="@+id/sign_up_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_hello"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sign_up_icon"
        app:layout_constraintStart_toStartOf="@id/sign_up_icon"
        app:layout_constraintEnd_toEndOf="@id/sign_up_icon"/>

    <TextView
        android:id="@+id/sign_up_hello_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_hello_2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/sign_up_hello"
        app:layout_constraintStart_toStartOf="@id/sign_up_hello"
        app:layout_constraintEnd_toEndOf="@id/sign_up_hello"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email_Id"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_hello_2"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Password_add"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Confirm_Password"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:text="@string/create_account"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_edit_text"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right"/>

    <TextView
        android:id="@+id/login_text_view_btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/create_account_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/login_text_view_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/Login"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_text_view_btn_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/login_text_view_btn"
        app:layout_constraintLeft_toLeftOf="@id/barrier_center_left"
        app:layout_constraintRight_toRightOf="@id/barrier_center_right"/>

</androidx.constraintlayout.widget.ConstraintLayout>